FIND_PACKAGE (SWIG REQUIRED)
INCLUDE (UseSWIG)


MESSAGE ("Building for perl")
FIND_PACKAGE (Perl REQUIRED)
FIND_PACKAGE (PerlLibs REQUIRED)


INCLUDE_DIRECTORIES (${CMAKE_SOURCE_DIR})
INCLUDE_DIRECTORIES (${PERL_INCLUDE_PATH})
INCLUDE (UseSWIG)


SET_SOURCE_FILES_PROPERTIES (../swig/utils.i PROPERTIES CPLUSPLUS ON)
SWIG_ADD_MODULE (utils perl ../swig/utils.i)
SWIG_LINK_LIBRARIES (utils libdnf)
SWIG_LINK_LIBRARIES (utils ${PERL_LIBRARY})
SWIG_LINK_LIBRARIES (utils ${SQLite3_LIBRARIES})

SET_SOURCE_FILES_PROPERTIES (../swig/swdb.i PROPERTIES CPLUSPLUS ON)
SWIG_ADD_MODULE (swdb perl ../swig/swdb.i)
SWIG_LINK_LIBRARIES (swdb libdnf)
SWIG_LINK_LIBRARIES (swdb ${PERL_LIBRARY})
