test_files =								\
	gpg-asc/repodata/primary.sqlite.bz2				\
	gpg-asc/repodata/repomd.xml					\
	gpg-asc/repodata/repomd.xml.asc					\
	gpg-asc/yum.repos.d/gpg-repo-asc.repo				\
	gpg-no-asc/repodata/primary.sqlite.bz2				\
	gpg-no-asc/repodata/repomd.xml					\
	gpg-no-asc/yum.repos.d/gpg-repo-no-asc.repo			\
	gpg-no-pubkey/gpg-repo-no-pubkey.repo				\
	gpg-wrong-asc/repodata/primary.sqlite.bz2			\
	gpg-wrong-asc/repodata/repomd.xml				\
	gpg-wrong-asc/repodata/repomd.xml.asc				\
	gpg-wrong-asc/yum.repos.d					\
	gpg-wrong-asc/yum.repos.d/gpg-repo-wrong-asc.repo		\
	yum.repos.d/bumblebee.repo					\
	yum.repos.d/local.repo						\
	yum.repos.d/redhat.repo

EXTRA_DIST = $(test_files)

-include $(top_srcdir)/git.mk
