test_files =								\
	hawkey/change.repo						\
	hawkey/forcebest.repo						\
	hawkey/greedy.repo						\
	hawkey/installonly.repo						\
	hawkey/main.repo						\
	hawkey/ppc.repo							\
	hawkey/@System-broken.repo					\
	hawkey/@System-k.repo						\
	hawkey/@System.repo						\
	hawkey/updates.repo						\
	hawkey/vendor.repo						\
	hawkey/yum/drpms/tour-4-5_4-6.noarch.drpm			\
	hawkey/yum/mystery-devel-19.67-1.noarch.rpm			\
	hawkey/yum/mystery.spec						\
	hawkey/yum/recreate						\
	hawkey/yum/repodata/4d4b903662ace0b08bda1d53f89c333614b7f658172bc9f0c87b0eef276ff5a1-filelists.xml.gz		\
	hawkey/yum/repodata/51fb8278682bdb0ea0956720b098dadf637efc01566acb48203c54c90ba86dda-other.xml.gz		\
	hawkey/yum/repodata/52d800b3426c540bb88a80d01fb6c8d227ae14edca7446fa0f348a286223fb8b-prestodelta.xml.gz		\
	hawkey/yum/repodata/f1ab2aa6c0e5881b9365f83a951e6696812ebfaaf56fee310c3f080c8849a1b4-primary.xml.gz		\
	hawkey/yum/repodata/repomd.xml					\
	hawkey/yum/repodata/updateinfo.xml.gz				\
	hawkey/yum/tour-4-6.noarch.rpm					\
	hawkey/yum/tour.spec						\
	hawkey/yum/updateinfo.xml.gz					\
	hawkey/yum_oldrpms/tour-4-5.noarch.rpm				\
	gpg-asc/repodata/primary.sqlite.bz2				\
	gpg-asc/repodata/repomd.xml					\
	gpg-asc/repodata/repomd.xml.asc					\
	gpg-asc/yum.repos.d/gpg-repo-asc.repo				\
	gpg-no-asc/repodata/primary.sqlite.bz2				\
	gpg-no-asc/repodata/repomd.xml					\
	gpg-no-asc/yum.repos.d/gpg-repo-no-asc.repo			\
	gpg-no-pubkey/gpg-repo-no-pubkey.repo				\
	gpg-wrong-asc/repodata/primary.sqlite.bz2			\
	gpg-wrong-asc/repodata/repomd.xml				\
	gpg-wrong-asc/repodata/repomd.xml.asc				\
	gpg-wrong-asc/yum.repos.d					\
	gpg-wrong-asc/yum.repos.d/gpg-repo-wrong-asc.repo		\
	yum.repos.d/bumblebee.repo					\
	yum.repos.d/local.repo						\
	yum.repos.d/redhat.repo

EXTRA_DIST = $(test_files)

-include $(top_srcdir)/git.mk
